Products.CMFCalendar Changelog
==============================

2.3.0 (unreleased)
------------------

- profiles: Modified Method Aliases used in type Actions.


2.3.0-beta (2012-03-21)
------------------------

- Converted the CalendarTool into a local utility.

- Made sure converted tools are used as utilities.

- Fixed tests to be compatibility with DateTime 3.

- Event: Fixed object initialization.
  Default start and stop times are now rounded and offset-naive.

- Require at least Zope 2.13.12.


2.2.2 (2010-10-31)
------------------

- Adjusted test layer setup to work with Zope 2.13.0a2.

- Fixed Chameleon incompatibilities in some templates.


2.2.1 (2010-07-04)
------------------

- Fixed ViewPageTemplateFile import to use the correct version from Five.

- Deal with deprecation warnings for Zope 2.13.


2.2.0 (2010-01-04)
------------------

- no changes from version 2.2.0-beta


2.2.0-beta (2009-12-06)
-----------------------

- no changes from version 2.2.0-alpha


2.2.0-alpha (2009-11-13)
------------------------

- Got rid of redundant icon related type info properties.
  (https://bugs.launchpad.net/zope-cmf/+bug/397795)

- moved the Zope dependency to version 2.12.0b3dev

- Cleaned up / normalized imports:

  o Don't import from Globals;  instead, use real locations.

  o Make other imports use the actual source module, rather than an
    intermediate (e.g., prefer importing 'ClassSecurityInfo' from
    'AccessControl.SecurityInfo' rather than from 'AccessControl').

  o Avoid relative imports, which will break in later versions of Python.

- profiles: Added an add view expression to the Event content type definition.

- Fixed a bug were the last day of each month was missed.
  (see https://dev.plone.org/plone/ticket/7238)

- Event GenericSetup type definition: Add an icon URL expression to the 
  Event content type definition.

- Event: Added basic iCal and vCal views
  (https://bugs.launchpad.net/zope-cmf/+bug/161714)
