@@ -52,7 +52,7 @@
                         datestring python:'%d/%0.2d/%0.2d' % (year, month, daynumber);"
             tal:attributes="class python: calendar_box_view.getDaysClass(daynumber, month, year, day['event'])">
           <a tal:omit-tag="not: day/event"
-             tal:attributes="href string:${portal_url}/calendar_day.html?date=${datestring}"
+             tal:attributes="href string:${portal_url}/calendar_day?date=${datestring}"
              tal:content="python:daynumber or default"> &nbsp;</a>
          </td></tal:loop>
         </tr>
