@@ -17,9 +17,8 @@
  <property name="filter_content_types">True</property>
  <property name="allowed_content_types"/>
  <property name="allow_discussion">False</property>
- <alias from="(Default)" to="@@view.html"/>
- <alias from="edit" to="@@edit.html"/>
- <alias from="view" to="@@view.html"/>
+ <alias from="(Default)" to="@@view"/>
+ <alias from="edit" to="@@edit"/>
  <action title="View" action_id="view" category="object" condition_expr=""
     icon_expr="string:${portal_url}/preview_icon.png" link_target=""
     url_expr="string:${object_url}" visible="True">
